--- a/4/styles/styles.css
+++ b/4/styles/styles.css
@@ -14,7 +14,15 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
@@ -34,10 +42,29 @@ body {
 .catalog-filter-list,
 .cards,
 .pagination,
-.list-social {
+.list-social,
+.nav-list {
   list-style: none;
 }
 
+.navigation {
+  display: flex;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+navigation-logo {
+  width: 140px;
+  margin: 0;
+  padding: 0;
+  margin-right: 28px;
+}
+
+nav-list {
+  width: 339px;
+  margin: 0;
+  padding: 0;
+}
 .navigation-link {
   font-weight: 700;
   font-size: 20px;
@@ -48,6 +75,10 @@ body {
   background-color: #ffffff;
 }
 
+.navigation-user {
+  max-width: 268px;
+  margin-left: auto;
+}
 .navigation-search {
   background-image: url("../images/service-icons/search.svg");
   background-repeat: no-repeat;
@@ -93,20 +124,45 @@ body {
   text-decoration: none;
 }
 
-/* Body */
-.welcome {
+/* main */
+.main-container {
+  flex-grow: 1;
+}
+
+.page-container {
+  width: 1200px;
+  margin: 0 auto;
+}
+.hero {
   background-image: url("../images/hero.jpg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center bottom;
   width: 1200px;
   height: 485px;
   background-color: #c7b39b;
 }
 
+.hero-image-description {
+  display: block;
+  margin: 0 auto;
+}
+
 .advantages {
   background-color: #ffffff;
 }
+
+.advantages-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1200px;
+  padding: 0;
+  text-align: center;
+  margin: 0 auto;
+}
+
 .dark-background {
+  width: 1200px;
   background-color: #82b3d3;
   color: #ffffff;
 }
@@ -126,10 +182,12 @@ body {
 
 .medium-background {
   background-color: rgba(131, 179, 211, 0.2);
+  width: 400px;
 }
 
 .light-background {
   background: rgba(131, 179, 211, 0.12);
+  width: 400px;
 }
 
 .title-item {
@@ -159,12 +217,27 @@ body {
   height: 385px;
 }
 
-.title-advantages {
+.title {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
   text-align: center;
+}
+
+.advantages-service {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1200px;
+  padding: 0;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.advantages-item-service {
+  text-align: center;
+  margin: auto;
 }
 
 .title-service {
@@ -177,6 +250,7 @@ body {
 
 .service-medium-background {
   background-color: rgba(131, 179, 211, 0.12);
+  width: 400px;
 }
 
 .home-advantages {
@@ -187,6 +261,7 @@ body {
 
 .service {
   background-color: #ffffff;
+  width: 400px;
 }
 
 .burger {
@@ -203,14 +278,7 @@ body {
 
 .search-hotels {
   background-color: #ffffff;
-}
-
-.search-hotels-title {
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 36px;
-  text-align: center;
-  text-transform: uppercase;
+  width: 1200px;
 }
 
 .search-catalog {
@@ -235,16 +303,6 @@ body {
   color: #ffffff;
 }
 
-.subscribe-title {
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 36px;
-  text-transform: uppercase;
-  text-align: center;
-}
-.subscribe p {
-  color: #ffffff;
-}
 .subscribe-button {
   height: 52px;
   font-weight: 700;
@@ -265,6 +323,22 @@ body {
 }
 
 /* Подвал */
+.footer-container {
+  display: flex;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.list-social {
+  width: 142px;
+  margin-right: 42px;
+}
+
+.phone {
+  text-align: center;
+  width: 720px;
+}
+
 .address-phone {
   font-size: 40px;
   line-height: 40px;
@@ -273,16 +347,21 @@ body {
   color: #000000;
 }
 
+.about-text {
+  margin-left: auto;
+  max-width: 115px;
+}
 /* Каталог */
 
-.main-inner {
-  display: block;
+.filter-form {
   background-image: url("../images/filtr-background.jpg");
   width: 1200px;
-  height: 412px;
+  background-size: cover;
   background-repeat: no-repeat;
   background-color: #756157;
   color: #ffffff;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .inner-header-title {
@@ -309,6 +388,20 @@ body {
   font-size: 16px;
 }
 
+.filter {
+  display: flex;
+  width: 1060px;
+  margin: 0;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+}
+
+.catalog-filter-hotels {
+  width: 150px;
+  margin-right: 70px;
+}
+
 .catalog-filter-title {
   font-weight: 700;
   font-size: 20px;
@@ -319,6 +412,17 @@ body {
 .catalog-filter-item {
   line-height: 23px;
 }
+
+.catalog-filter-type-house {
+  width: 151px;
+  margin-right: 141px;
+}
+
+.about-text {
+  max-width: 549px;
+  margin-left: auto;
+}
+
 .min-price,
 .max-price {
   line-height: 24px;
@@ -339,30 +443,37 @@ body {
   line-height: 20px;
   color: #ffffff;
   border: 0;
+  background: transparent;
 }
 
-.inner-header-results {
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 36px;
-  text-transform: uppercase;
+.result-search title {
+  width: 338px;
+  margin-right: 200px;
 }
 
-.button-show-card {
+/* .select-control {
+  width: 292 px;
+} */
+
+.show {
+  max-width: 160px;
+  margin-left: auto;
+}
+.button-show card {
   background-image: url("../images/filter/cards.svg");
   width: 16px;
   height: 14px;
   background-repeat: no-repeat;
 }
 
-.button-show-slide {
+.button-show slide {
   background-image: url("../images/filter/slide.svg");
   width: 16px;
   height: 14px;
   background-repeat: no-repeat;
 }
 
-.button-show-list {
+.button-show list {
   background-image: url("../images/filter/list.svg");
   width: 16px;
   height: 14px;
@@ -373,6 +484,10 @@ body {
 
 .result-search {
   background: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  width: 1060px;
+  margin: 0 auto;
 }
 
 .cards {
@@ -418,18 +533,26 @@ body {
   border: 0;
 }
 
-/* Доделать */
+.visually-hidden {
+}
+
 .stars-4 {
-  background-image: url("../images/hotels/star.svg");
+  background-image: url("../images/hotels/stars-4.svg");
   background-repeat: no-repeat;
+  width: 140px;
+  height: 37px;
 }
 
 .stars-3 {
-  background-image: url("../images/hotels/star.svg");
+  background-image: url("../images/hotels/stars-3.svg");
   background-repeat: no-repeat;
+  width: 140px;
+  height: 37px;
 }
 .stars-2 {
-  background-image: url("../images/hotels/star.svg");
+  background-image: url("../images/hotels/stars-2.svg");
+  width: 140px;
+  height: 37px;
   background-repeat: no-repeat;
 }
 
