--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,19 +20,34 @@ html {
 
 body {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
+  padding: 0;
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   background-color: #f2f2f2;
-  color: black;
+  color: #333333;
+  height: 100%;
+}
+
+.main-container {
+  margin: 0;
+  flex-grow: 1;
+}
+
+.page-container {
+  width: 1200px;
+  margin: 0 auto;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  background: #ffffff;
 }
 
 /* Шапка */
 .page-header {
-  background-color: #ffffff;
+  display: flex;
+  width: 1200px;
 }
 
 .navigation-user,
@@ -51,104 +66,142 @@ body {
   display: flex;
   width: 1200px;
   margin: 0 auto;
+  margin-bottom: -8px;
 }
 
-navigation-logo {
+.navigation-logo {
+  display: block;
   width: 140px;
-  margin: 0;
-  padding: 0;
   margin-right: 28px;
+  /* Так быть не должно, переделать */
+  margin-left: 70px;
 }
 
-nav-list {
+.nav-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   width: 339px;
   margin: 0;
   padding: 0;
 }
+
 .navigation-link {
+  display: block;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
   text-align: center;
   text-decoration: none;
-  text-transform: none;
-  background-color: #ffffff;
+  text-transform: capitalize;
+  color: #000000;
+  padding: 20px 16px;
+  margin: 0;
 }
 
 .navigation-user {
+  display: flex;
   max-width: 268px;
+  justify-content: end;
+  align-items: center;
   margin-left: auto;
+  margin-right: 70px;
+  /* align-items: flex-start; */
 }
+
 .navigation-search {
   background-image: url("../images/service-icons/search.svg");
   background-repeat: no-repeat;
-  width: 20px;
-  height: 20px;
+  min-width: 20px;
+  min-height: 20px;
+  padding: 22px 12px;
+  background-position: center;
+  margin: 0;
 }
 
 .navigation-favorite {
-  display: flex;
   background-image: url("../images/service-icons/heart.svg");
   background-repeat: no-repeat;
-  width: 18px;
-  height: 17px;
-  text-decoration: none;
+  min-width: 20px;
+  min-height: 20px;
+  padding: 22px 12px;
+  margin: 0;
+  margin-right: 20px;
+  background-position: center;
 }
 
 .amount-favorites {
   background: #7db54f;
   color: #ffffff;
-  width: 20px;
-  height: 20px;
-  border-radius: 10px;
-  text-align: center;
   font-size: 10px;
   line-height: 10px;
-  text-decoration: none;
-  width: 20px;
-  height: 20px;
 }
 
-.search-modal {
-  width: 160px;
-  height: 36px;
-
+.button {
+  display: block;
+  background-color: #756157;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
+  align-items: center;
   text-align: center;
   text-transform: uppercase;
-  background-color: #756157;
-  align-items: center;
   color: #ffffff;
   text-decoration: none;
+  padding: 8px 50px;
+  border: 0;
+}
+.navigation-item .button {
+  padding: 8px 34px;
+}
+
+.subscribe-form .button {
+  height: 52px;
+  background: #82b3d3;
+  font-size: 20px;
+  line-height: 36px;
 }
 
 /* main */
-.main-container {
-  flex-grow: 1;
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
-.page-container {
-  width: 1200px;
-  margin: 0 auto;
-}
 .hero {
+  display: flex;
   background-image: url("../images/hero.jpg");
   background-repeat: no-repeat;
   background-position: center bottom;
   width: 1200px;
-  height: 485px;
+  background-size: cover;
   background-color: #c7b39b;
 }
 
 .hero-image-description {
+  margin: 51px 371px 82px;
+}
+
+.intro {
   display: block;
-  margin: 0 auto;
+  margin: auto;
+  padding: 69px 290px;
+}
+
+.intro-service {
+  display: block;
+  margin: auto;
+  padding: 64px 355px;
 }
 
 .advantages {
-  background-color: #ffffff;
 }
 
 .advantages-list {
@@ -165,6 +218,7 @@ nav-list {
   width: 1200px;
   background-color: #82b3d3;
   color: #ffffff;
+  margin: 0;
 }
 
 .title-advantages-list {
@@ -182,28 +236,39 @@ nav-list {
 
 .medium-background {
   background-color: rgba(131, 179, 211, 0.2);
-  width: 400px;
+  width: 230px;
+  margin: 0;
+}
+
+.advantages-list .medium-background {
+  padding: 112px 85px;
 }
 
 .light-background {
   background: rgba(131, 179, 211, 0.12);
-  width: 400px;
+  width: 230px;
+  margin: 0;
 }
 
+.advantages-list .light-background {
+  padding: 112px 85px;
+}
+
+.advantages-service .light-background {
+  padding: 81px 85px;
+}
 .title-item {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   text-align: center;
   text-transform: uppercase;
-  text-decoration: underline solid rgba(0, 0, 0, 0.3) 2px;
-  text-underline-offset: 30px;
+  color: #000000;
 }
 
 .description {
   font-size: 22px;
   line-height: 26px;
-  color: #333333;
   text-align: center;
 }
 
@@ -223,6 +288,7 @@ nav-list {
   line-height: 36px;
   text-transform: uppercase;
   text-align: center;
+  color: #000000;
 }
 
 .advantages-service {
@@ -235,24 +301,6 @@ nav-list {
   margin: 0 auto;
 }
 
-.advantages-item-service {
-  text-align: center;
-  margin: auto;
-}
-
-.title-service {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.service-medium-background {
-  background-color: rgba(131, 179, 211, 0.12);
-  width: 400px;
-}
-
 .home-advantages {
   background-image: url(../images/advantages/home-icon.svg);
   width: 75px;
@@ -260,7 +308,6 @@ nav-list {
 }
 
 .service {
-  background-color: #ffffff;
   width: 400px;
 }
 
@@ -276,23 +323,12 @@ nav-list {
   height: 76px;
 }
 
-.search-hotels {
-  background-color: #ffffff;
-  width: 1200px;
-}
-
-.search-catalog {
-  font-weight: 700;
+.search-hotels .button {
+  width: 276px;
   font-size: 20px;
   line-height: 36px;
-  color: #ffffff;
-  align-items: center;
-  text-align: center;
-  text-transform: uppercase;
-  background-color: #756157;
-  text-decoration: none;
+  margin: auto;
 }
-
 .subscribe {
   background-image: url("../images/subscribe.jpg");
   width: 1200px;
@@ -301,19 +337,6 @@ nav-list {
   background-position: center;
   background-color: #c7b39b;
   color: #ffffff;
-}
-
-.subscribe-button {
-  height: 52px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 36px;
-  align-items: center;
-  text-align: center;
-  text-transform: uppercase;
-  color: #ffffff;
-  background: #82b3d3;
-  border: 0;
 }
 
 .field {
@@ -325,15 +348,28 @@ nav-list {
 /* Подвал */
 .footer-container {
   display: flex;
-  width: 1200px;
+  width: 1060px;
   margin: 0 auto;
+  padding: 45px 70px 35px 70px;
+  align-items: center;
 }
 
 .list-social {
+  display: flex;
   width: 142px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0;
   margin-right: 42px;
 }
 
+.item-social {
+  display: flex;
+  width: 47px;
+  height: 40px;
+  align-items: center;
+  justify-content: center;
+}
 .phone {
   text-align: center;
   width: 720px;
@@ -349,7 +385,7 @@ nav-list {
 
 .about-text {
   margin-left: auto;
-  max-width: 115px;
+  min-width: 115px;
 }
 /* Каталог */
 
@@ -483,7 +519,6 @@ nav-list {
 /* Гостиницы */
 
 .result-search {
-  background: #ffffff;
   display: flex;
   justify-content: space-between;
   width: 1060px;
@@ -564,7 +599,6 @@ nav-list {
 
 /* Пагинация */
 .pagination-item {
-  background: #ffffff;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
@@ -591,5 +625,4 @@ nav-list {
 
 /* Подписка каталог */
 .subscribe-catalog {
-  background: #ffffff;
 }
