--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,6 +67,10 @@ body {
   list-style: none;
 }
 
+/* Переделать */
+p {
+  margin: 0;
+}
 /* Кнопки */
 
 .select {
@@ -91,10 +95,18 @@ body {
   border: 0;
 }
 
+.subscribe-form .button {
+  background: #82b3d3;
+  font-size: 20px;
+  line-height: 36px;
+  margin: 0;
+}
+
 /* Кнопки-ссылки */
 
 .button {
-  display: inline-block;
+  display: flex;
+  flex-wrap: wrap;
   box-sizing: border-box;
   background-color: #756157;
   font-weight: 700;
@@ -119,12 +131,7 @@ body {
   font-size: 20px;
   line-height: 36px;
   margin: 0 auto;
-}
-
-.subscribe-form .button {
-  background: #82b3d3;
-  font-size: 20px;
-  line-height: 36px;
+  max-width: 590px;
 }
 
 /* Шапка */
@@ -222,6 +229,12 @@ body {
   padding: 69px 274px;
 }
 
+.intro .title {
+  margin-bottom: 25px;
+}
+
+/* advantages */
+
 .title {
   font-weight: 700;
   font-size: 30px;
@@ -230,67 +243,9 @@ body {
   text-align: center;
   color: #000000;
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
-.intro .title {
-  margin-bottom: 25px;
-}
-
-/* advantages */
-
-.advantages-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 0;
-  text-align: center;
-  margin: 0 auto;
-}
-
-.dark-background {
-  min-width: 1200px;
-  background-color: #82b3d3;
-  color: #ffffff;
-  margin: 0;
-}
-
-.title-advantages-list {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
-  text-transform: uppercase;
-}
-
-.image-advantages {
-  background-image: url(../images/advantages/street.jpg);
-  width: 800px;
-  height: 385px;
-}
-
-.medium-background {
-  background-color: rgba(131, 179, 211, 0.2);
-  width: 230px;
-  margin: 0;
-}
-
-.advantages-list .medium-background {
-  padding: 112px 85px;
-}
-
-.light-background {
-  background: rgba(131, 179, 211, 0.12);
-  width: 230px;
-  margin: 0;
-}
-
-.advantages-list .light-background {
-  padding: 112px 85px;
-}
-
-.advantages-service .light-background {
-  padding: 81px 85px;
-}
 .title-item {
   font-weight: 700;
   font-size: 24px;
@@ -298,6 +253,53 @@ body {
   text-align: center;
   text-transform: uppercase;
   color: #000000;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.advantages-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  text-align: center;
+  margin: 0;
+}
+
+.dark-background {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  background-color: #82b3d3;
+  color: #ffffff;
+}
+
+.dark-background .title-item {
+  color: #ffffff;
+}
+.image-advantages {
+  background-image: url(../images/advantages/street.jpg);
+  background-size: cover;
+  width: 800px;
+}
+
+.medium-background {
+  background-color: rgba(131, 179, 211, 0.2);
+}
+
+.advantages-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  min-height: 160px;
+  width: 230px;
+  margin: 0;
+  padding: 112px 85px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.light-background {
+  background: rgba(131, 179, 211, 0.12);
 }
 
 .description {
@@ -312,47 +314,72 @@ body {
   color: #ffffff;
 }
 
+.bridge {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 .image-bridge {
   background-image: url(../images/advantages/bridge.jpg);
+  background-size: cover;
   width: 800px;
-  height: 385px;
 }
 
 .intro-service {
   display: block;
   margin: auto;
-  padding: 64px 355px;
+  padding: 64px 347px;
+}
+
+.intro-service .title {
+  margin-bottom: 20px;
 }
 
 .advantages-service {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   padding: 0;
   text-align: center;
   margin: 0 auto;
 }
 
+.service-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 223px;
+  width: 230px;
+  margin: 0;
+  padding: 81px 85px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .home-advantages {
+  display: block;
   background-image: url(../images/advantages/home-icon.svg);
   width: 75px;
   height: 72px;
-}
-
-.service {
-  width: 400px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 
 .burger {
+  display: block;
   background-image: url(../images/advantages/burger.svg);
   width: 74px;
   height: 70px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 
 .gifts {
+  display: block;
   background-image: url("../images/advantages/gift.svg");
   width: 64px;
   height: 76px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 
 /* Поиск отелей */
@@ -366,6 +393,10 @@ body {
 
 .search-hotels p {
   margin-bottom: 54px;
+}
+
+.search-hotels .title {
+  margin-bottom: 20px;
 }
 
 /* Подписка ПЕРЕДЕЛАТЬ*/
@@ -385,14 +416,16 @@ body {
 }
 
 .field {
+  box-sizing: border-box;
   line-height: 24px;
   min-height: 52px;
-  min-width: 440px;
+  width: 452px;
   font-family: "PT Sans", sans-serif;
   border: 0;
+  padding: 14px 20px;
 }
 
-.subscribe p {
+.subscribe .description {
   margin-bottom: 54px;
 }
 
@@ -401,7 +434,7 @@ body {
   display: flex;
   width: 1060px;
   margin: 0 auto;
-  padding: 45px 70px 35px 70px;
+  padding: 40px 70px 30px;
   align-items: center;
 }
 
@@ -411,10 +444,12 @@ body {
   text-align: center;
   max-width: 720px;
 }
+
 /* Проверить высоту */
 .address-phone {
   font-size: 40px;
   line-height: 40px;
+  max-width: 500px;
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
